# gente

./: .gitignore  AUTHORS  README.md  configure.ac
src/: Makefile.am  cc-timezone-map.c  data.txt  gente.c  gente.desktop  gente.gresource.xml  gente.ui  tz.c
